--- a/test_update.yml
+++ b/test_update.yml
@@ -6,4 +6,4 @@
   tasks:
     - debug:
         msg: "Owner: {{ pyenv_owner }}"
-    - include: 'tasks/main.yml'
+    - include_tasks: 'tasks/main.yml'
