--- a/test.yml
+++ b/test.yml
@@ -5,4 +5,4 @@
   tasks:
     - debug:
         msg: "Owner: {{ pyenv_owner }}"
-    - include: 'tasks/main.yml'
+    - include_tasks: 'tasks/main.yml'
