--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -48,7 +48,7 @@ pyenv_redhat_packages:
   - make
   - git
   - gcc
-  - "{{ ( (ansible_facts.distribution_major_version | default(0) | int) < 8) | ternary('libselinux-python','python3-libselinux') }}"
+  - "{{ (ansible_facts.distribution != 'Fedora' and ((ansible_facts.distribution_major_version | default(0) | int) < 8)) | ternary('libselinux-python','python3-libselinux') }}"
   - zlib-devel
   - openssl-devel
   - bzip2-devel
