--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "2.5.1"
 description = "Ansible role to install pyenv."
 authors = ["staticdev <staticdev-support@protonmail.com>"]
 license = "MIT"
-readme = "README.rst"
+readme = "README.md"
 
 [tool.poetry.dependencies]
 
