--- a/tasks/custom_facts.yml
+++ b/tasks/custom_facts.yml
@@ -9,7 +9,7 @@
     src: templates/check-configure-options.py.j2
     dest: /etc/ansible/facts.d/check-configure-options.py
     owner: "{{ pyenv_owner }}"
-    group: "{{ pyenv_owner }}"
+    group: "{{ pyenv_owner_group }}"
     mode: "0755"
 
 - name: Copy over python_check fact file
@@ -17,7 +17,7 @@
     src: templates/pyenv_python_installations.fact.j2
     dest: /etc/ansible/facts.d/pyenv_python_installations.fact
     owner: "{{ pyenv_owner }}"
-    group: "{{ pyenv_owner }}"
+    group: "{{ pyenv_owner_group }}"
     mode: "0755"
 
 - name: Reload setup to gather custom facts
