Fix buildin ansible module calls

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,5 +5,5 @@
 
   tasks:
     - name: "Include staticdev.pyenv"
-      include_role:
+      ansible.builtin.include_role:
         name: "staticdev.pyenv"
