--- a/molecule/multi-version/converge.yml
+++ b/molecule/multi-version/converge.yml
@@ -5,7 +5,7 @@
 
   tasks:
     - name: "Include staticdev.pyenv"
-      include_role:
+      ansible.builtin.include_role:
         name: "staticdev.pyenv"
       vars:
         pyenv_global:
