--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,12 +1,12 @@
 ---
 - name: Ensure apt cache is up to date
-  apt:
+  ansible.builtin.apt:
     update_cache: true
     cache_valid_time: 3600
   become: true
 
 - name: Install development packages necessary for building Python
-  apt:
+  ansible.builtin.apt:
     pkg: "{{ pyenv_debian_packages }}"
     state: present
   become: true
