--- a/tasks/custom_facts.yml
+++ b/tasks/custom_facts.yml
@@ -1,11 +1,11 @@
 ---
 - name: Create folder for custom facts
-  file:
+  ansible.builtin.file:
     path: /etc/ansible/facts.d
     state: directory
 
 - name: Copy over check-configure-options.py
-  template:
+  ansible.builtin.template:
     src: templates/check-configure-options.py.j2
     dest: /etc/ansible/facts.d/check-configure-options.py
     owner: "{{ pyenv_owner }}"
@@ -13,7 +13,7 @@
     mode: "0755"
 
 - name: Copy over python_check fact file
-  template:
+  ansible.builtin.template:
     src: templates/pyenv_python_installations.fact.j2
     dest: /etc/ansible/facts.d/pyenv_python_installations.fact
     owner: "{{ pyenv_owner }}"
@@ -21,5 +21,5 @@
     mode: "0755"
 
 - name: Reload setup to gather custom facts
-  setup:
+  ansible.builtin.setup:
     filter: ansible_local
