Possible to disable virtualenvs
Change-Id: I45d81e6c549c5c6e4c2a7db45dd61b806d0515be

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,6 +7,7 @@ pyenv_owner_group: "{{ pyenv_owner }}"
 pyenv_setting_path: "{% if pyenv_env == 'user' %}~/.bashrc{% else %}/etc/profile.d/pyenv.sh{% endif %}"
 pyenv_update_git_install: true
 pyenv_enable_autocompletion: false
+pyenv_enable_virtualenvs: true
 pyenv_python_versions:
   - 3.10.6
 pyenv_global:
