--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -7,3 +7,7 @@
     - name: "Include staticdev.pyenv"
       ansible.builtin.include_role:
         name: "staticdev.pyenv"
+      vars:
+        pyenv_version: "v2.3.9"
+        pyenv_virtualenv_version: "v1.1.5"
+        pyenv_update_version: "810db78"
