--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -3,12 +3,14 @@
   ansible.builtin.git:
     repo: https://github.com/pyenv/pyenv.git
     dest: "{{ pyenv_path }}"
+    version: "{{ pyenv_version }}"
     update: "{{ pyenv_update_git_install }}"
 
 - name: Install PyEnv-virtualenv plugin
   ansible.builtin.git:
     repo: https://github.com/yyuu/pyenv-virtualenv.git
     dest: "{{ pyenv_path }}/plugins/pyenv-virtualenv"
+    version: "{{ pyenv_virtualenv_version }}"
     update: "{{ pyenv_update_git_install }}"
   when: pyenv_enable_virtualenvs
 
@@ -16,6 +18,7 @@
   ansible.builtin.git:
     repo: https://github.com/pyenv/pyenv-update.git
     dest: "{{ pyenv_path }}/plugins/pyenv-update"
+    version: "{{ pyenv_update_version }}"
     update: "{{ pyenv_update_git_install }}"
   when: pyenv_update
 
