--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,7 @@ pyenv_virtualenv_version: "HEAD"
 pyenv_update_version: "HEAD"
 pyenv_env: "user"
 pyenv_path: "{% if pyenv_env == 'user' %}{{ ansible_env.HOME }}/pyenv{% else %}/usr/local/pyenv{% endif %}"
-pyenv_rc_path: "{{ pyenv_path }}"
+pyenvrc_path: "{{ pyenv_path }}"
 pyenv_owner: "{{ ansible_env.USER }}"
 pyenv_owner_group: "{{ pyenv_owner }}"
 pyenv_setting_path: "{% if pyenv_env == 'user' %}~/.bashrc{% else %}/etc/profile.d/pyenv.sh{% endif %}"
