Changed to pyenv_shellrc_file from pyenv_setting_path
Change-Id: Idf5a9420c8af521290244cc6f6d3829a71e4f07b

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -29,15 +29,25 @@
     owner: "{{ pyenv_owner }}"
     mode: "0644"
 
-- name: "Load pyenv env variables in {{ pyenv_setting_path }}"
-  ansible.builtin.lineinfile: dest="{{ pyenv_setting_path }}"
+- name: Use legacy variable pyenv_setting_path if available
+  ansible.builtin.set_fact:
+    pyenv_shellrc_file: "{{ pyenv_setting_path }}"
+  when: pyenv_setting_path is defined
+
+- name: Print deprecation warning if pyenv_setting_path defined
+  ansible.builtin.debug:
+    msg: pyenv_setting_path is deprecated, use pyenv_shellrc_file instead
+  when: pyenv_setting_path is defined
+
+- name: "Load pyenv env variables in {{ pyenv_shellrc_file }}"
+  ansible.builtin.lineinfile: dest="{{ pyenv_shellrc_file }}"
     regexp="\.pyenvrc$"
     line="source {{ pyenvrc_path }}/.pyenvrc"
     state=present
     create=yes
 
-- name: "Add pyenv autocomplete in {{ pyenv_setting_path }}"
-  ansible.builtin.lineinfile: dest="{{ pyenv_setting_path }}"
+- name: "Add pyenv autocomplete in {{ pyenv_shellrc_file }}"
+  ansible.builtin.lineinfile: dest="{{ pyenv_shellrc_file }}"
     regexp="pyenv\.bash$"
     line="source {{ pyenv_path }}/completions/pyenv.bash"
     state=present
