--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,7 @@ pyenv_path: "{% if pyenv_env == 'user' %}{{ ansible_env.HOME }}/pyenv{% else %}/
 pyenvrc_path: "{{ pyenv_path }}"
 pyenv_owner: "{{ ansible_env.USER }}"
 pyenv_owner_group: "{{ pyenv_owner }}"
-pyenv_setting_path: "{% if pyenv_env == 'user' %}~/.bashrc{% else %}/etc/profile.d/pyenv.sh{% endif %}"
+pyenv_shellrc_file: "{% if pyenv_env == 'user' %}~/.bashrc{% else %}/etc/profile.d/pyenv.sh{% endif %}"
 pyenv_update_git_install: true
 pyenv_enable_autocompletion: false
 pyenv_enable_virtualenvs: true
