--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,7 @@
 ---
+template: |
+  ## Changes
+  $CHANGES
 categories:
   - title: ":boom: Breaking Changes"
     label: "breaking"
@@ -26,7 +29,6 @@ categories:
     labels:
       - "dependencies"
       - "build"
-template: |
-  ## Changes
 
-  $CHANGES
+exclude-labels:
+  - "skip-changelog"
