--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -91,16 +91,17 @@
     pyenv_global_versions_path: "{{ pyenv_path }}/version"
   block:
     - name: "Does pyenv globals file exist?"
-      stat:
+      ansible.builtin.stat:
         path: "{{ pyenv_global_versions_path }}"
       register: _pyenv_globals_file
     - name: "Read the pyenv global versions"
-      slurp:
+      ansible.builtin.slurp:
         src: "{{ pyenv_global_versions_path }}"
       register: _pyenv_globals_file_content
       when: _pyenv_globals_file.stat.exists
     - name: "Set pyenv global {{ pyenv_global }}"
       ansible.builtin.shell: . {{ pyenvrc_path }}/.pyenvrc && pyenv global {{ pyenv_global | join(' ') }} && pyenv rehash
+      changed_when: true
       when:
         - _pyenv_globals_file.stat.exists
         - (_pyenv_globals_file_content.content | b64decode | split('\n') | select() | list) != pyenv_global
