Add debian12 support

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,6 +43,7 @@ jobs:
     strategy:
       matrix:
         distro:
+          - debian12
           - debian11
           - debian10
           # https://github.com/geerlingguy/docker-ubuntu2204-ansible/issues/6
