--- a/meta/main.yml
+++ b/meta/main.yml
@@ -15,7 +15,7 @@ galaxy_info:
 
     - name: Debian
       versions:
-        - buster
+        - bookworm
         - bullseye
 
     - name: Ubuntu
