--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,7 +6,7 @@ pyenv_update_version: "HEAD"
 pyenv_env: "user"
 pyenv_path: "{% if pyenv_env == 'user' %}{{ ansible_env.HOME }}/pyenv{% else %}/usr/local/pyenv{% endif %}"
 pyenvrc_path: "{{ pyenv_path }}"
-pyenv_owner: "{{ ansible_env.USER }}"
+pyenv_owner: "{{ ansible_facts.user_id }}"
 pyenv_owner_group: "{{ pyenv_owner }}"
 pyenv_shellrc_file: "{% if pyenv_env == 'user' %}~/.bashrc{% else %}/etc/profile.d/pyenv.sh{% endif %}"
 pyenv_update_git_install: true
