Additional custom .pyenvrc
You can now optionally add a custom .pyenvrc shell script in addition
to the one delivered by the role. This custom .pyenvrc will be copied
to the same path as .pyenvrc as .pyenvrc.custom. It will be sourced by
.pyenvrc delivered by the role if exists.

This will become one way you can customize the python build environment.
This way you can set an environment not only as pyenv plugin python-build
supports according to:

https://github.com/pyenv/pyenv/blob/master/plugins/python-build/README.md#special-environment-variables

But also other environment variables supported by the python source code
compilation itself. This becomes very handy to really take full control
over the python build customization.

Signed-off-by: Jose M. Prieto <jose.prieto@roche.com>

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -29,6 +29,14 @@
     owner: "{{ pyenv_owner }}"
     mode: "0644"
 
+- name: Install custom .pyenvrc
+  ansible.builtin.copy:
+    src: "{{ pyenv_custom_pyenvrc_file }}"
+    dest: "{{ pyenvrc_path }}/.pyenvrc.custom"
+    owner: "{{ pyenv_owner }}"
+    mode: "0644"
+  when: pyenv_custom_pyenvrc_file is defined
+
 - name: Use legacy variable pyenv_setting_path if available
   ansible.builtin.set_fact:
     pyenv_shellrc_file: "{{ pyenv_setting_path }}"
