--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -25,6 +25,7 @@ pyenv_init_options: "{% if pyenv_env != 'user' %}--no-rehash{% endif %}"
 pyenv_update: false
 
 # additional options for the build process, e.g "--enable-shared"
+pyenv_install_extra_opts: ""
 pyenv_python_configure_opts: ""
 pyenv_uninstall_python_w_wrong_configure_opts: false
 
